--- a/packages/frontend/static/index.html
+++ b/packages/frontend/static/index.html
@@ -50,78 +50,252 @@
 			</div>
 			<div class="br"></div>
 			<div class="grid">
-				<div class="grid__item">
-					<div class="grid__item__header">
-						<div class="grid__itemitem__title">pepegert</div>
-					</div>
-					<div class="grid__item__player">
-						<video class="player__video" src="video.mp4"></video>
-						<div class="player__overlay">
-							<div class="player__overlay__top-gradient"></div>
-							<div class="player__overlay__header">
-								<div class="player__overlay__header__title">Minecraft speedrun</div>
-								<div class="player__overlay__header__viewers">1233 viewers</div>
-							</div>
-							<div class="player__overlay__controls">
-								<div
-									class="player__overlay__control-item player__overlay__controls__pause"
-								>
-									<span class="material-icons"> pause </span>
-								</div>
-								<div
-									class="player__overlay__control-item player__overlay__controls__volume-area"
-								>
-									<div class="player__overlay__controls__volume-btn">
-										<span class="material-icons"> volume_up </span>
+				<div class="grid__container" style="width: 100%">
+					<div class="grid__item" style="width: 50%">
+						<div class="grid__item__header">
+							<div class="grid__itemitem__title">pepegert</div>
+						</div>
+						<div class="grid__item__player" style="width: 50%">
+							<video class="player__video" src="video.mp4"></video>
+							<div class="player__overlay">
+								<div class="player__overlay__top-gradient"></div>
+								<div class="player__overlay__header">
+									<div class="player__overlay__header__title">
+										Minecraft speedrun
 									</div>
-									<div class="player__overlay__controls__volume-scrubber">
-										<div
-											class="player__overlay__controls__volume-level-indicator"
-										></div>
+									<div class="player__overlay__header__viewers">1233 viewers</div>
+								</div>
+								<div class="player__overlay__controls">
+									<div
+										class="player__overlay__control-item player__overlay__controls__pause"
+									>
+										<span class="material-icons"> pause </span>
+									</div>
+									<div
+										class="player__overlay__control-item player__overlay__controls__volume-area"
+									>
+										<div class="player__overlay__controls__volume-btn">
+											<span class="material-icons"> volume_up </span>
+										</div>
+										<div class="player__overlay__controls__volume-scrubber">
+											<div
+												class="player__overlay__controls__volume-level-indicator"
+											></div>
+										</div>
+									</div>
+									<div
+										class="player__overlay__control-item player__overlay__controls__quality"
+									>
+										<span class="material-icons"> settings </span>
+									</div>
+									<div
+										class="player__overlay__control-item player__overlay__controls__reload"
+									>
+										<span class="material-icons"> wifi_protected_setup </span>
 									</div>
 								</div>
-								<div
-									class="player__overlay__control-item player__overlay__controls__quality"
-								>
-									<span class="material-icons"> settings </span>
+								<div class="player__overlay__bottom-gradient"></div>
+							</div>
+						</div>
+						<div class="vbr"></div>
+						<div class="grid__item__chat" style="width: 50%">
+							<div class="chat__list">
+								<div class="chat__message">
+									<div class="chat__message__time">20:30&nbsp;</div>
+									<div class="chat__message__user-icons">😣😢&nbsp;</div>
+									<div class="chat__message__user">Bekert:&nbsp;</div>
+									<div class="chat__message__text">he pepega me pepega</div>
 								</div>
-								<div
-									class="player__overlay__control-item player__overlay__controls__reload"
-								>
-									<span class="material-icons"> wifi_protected_setup </span>
+								<div class="chat__message">
+									<div class="chat__message__time">20:30&nbsp;</div>
+									<div class="chat__message__user-icons">😣😢&nbsp;</div>
+									<div class="chat__message__user">Bekert:&nbsp;</div>
+									<div class="chat__message__text">he pepega me pepega</div>
+								</div>
+								<div class="chat__message">
+									<div class="chat__message__time">20:30&nbsp;</div>
+									<div class="chat__message__user-icons">😣😢&nbsp;</div>
+									<div class="chat__message__user">Bekert:&nbsp;</div>
+									<div class="chat__message__text">
+										he pepega me pepega aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+										xfjxfjjaxxcx
+									</div>
 								</div>
 							</div>
-							<div class="player__overlay__bottom-gradient"></div>
+							<div class="chat__textarea">
+								<div contenteditable class="chat__input"></div>
+								<div class="chat__smile-icon">😁</div>
+							</div>
 						</div>
 					</div>
+
 					<div class="vbr"></div>
-					<div class="grid__item__chat">
-						<div class="chat__list">
-							<div class="chat__message">
-								<div class="chat__message__time">20:30&nbsp;</div>
-								<div class="chat__message__user-icons">😣😢&nbsp;</div>
-								<div class="chat__message__user">Bekert:&nbsp;</div>
-								<div class="chat__message__text">he pepega me pepega</div>
+
+					<div class="grid__container grid__container--vertical" style="width: 50%">
+						<div class="grid__item" style="height: 40%">
+							<div class="grid__item__header">
+								<div class="grid__itemitem__title">pepegert</div>
 							</div>
-							<div class="chat__message">
-								<div class="chat__message__time">20:30&nbsp;</div>
-								<div class="chat__message__user-icons">😣😢&nbsp;</div>
-								<div class="chat__message__user">Bekert:&nbsp;</div>
-								<div class="chat__message__text">he pepega me pepega</div>
+							<div class="grid__item__player" style="width: 50%">
+								<video class="player__video" src="video.mp4"></video>
+								<div class="player__overlay">
+									<div class="player__overlay__top-gradient"></div>
+									<div class="player__overlay__header">
+										<div class="player__overlay__header__title">
+											Minecraft speedrun
+										</div>
+										<div class="player__overlay__header__viewers">
+											1233 viewers
+										</div>
+									</div>
+									<div class="player__overlay__controls">
+										<div
+											class="player__overlay__control-item player__overlay__controls__pause"
+										>
+											<span class="material-icons"> pause </span>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__volume-area"
+										>
+											<div class="player__overlay__controls__volume-btn">
+												<span class="material-icons"> volume_up </span>
+											</div>
+											<div class="player__overlay__controls__volume-scrubber">
+												<div
+													class="player__overlay__controls__volume-level-indicator"
+												></div>
+											</div>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__quality"
+										>
+											<span class="material-icons"> settings </span>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__reload"
+										>
+											<span class="material-icons">
+												wifi_protected_setup
+											</span>
+										</div>
+									</div>
+									<div class="player__overlay__bottom-gradient"></div>
+								</div>
 							</div>
-							<div class="chat__message">
-								<div class="chat__message__time">20:30&nbsp;</div>
-								<div class="chat__message__user-icons">😣😢&nbsp;</div>
-								<div class="chat__message__user">Bekert:&nbsp;</div>
-								<div class="chat__message__text">
-									he pepega me pepega aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-									xfjxfjjaxxcx
+							<div class="vbr"></div>
+							<div class="grid__item__chat" style="width: 50%">
+								<div class="chat__list">
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">he pepega me pepega</div>
+									</div>
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">he pepega me pepega</div>
+									</div>
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">
+											he pepega me pepega
+											aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa xfjxfjjaxxcx
+										</div>
+									</div>
+								</div>
+								<div class="chat__textarea">
+									<div contenteditable class="chat__input"></div>
+									<div class="chat__smile-icon">😁</div>
 								</div>
 							</div>
 						</div>
-						<div class="chat__textarea">
-							<div contenteditable class="chat__input"></div>
-							<div class="chat__smile-icon">😁</div>
+
+						<div class="br"></div>
+
+						<div class="grid__item" style="height: 60%">
+							<div class="grid__item__header">
+								<div class="grid__itemitem__title">pepegert</div>
+							</div>
+							<div class="grid__item__player" style="width: 50%">
+								<video class="player__video" src="video.mp4"></video>
+								<div class="player__overlay">
+									<div class="player__overlay__top-gradient"></div>
+									<div class="player__overlay__header">
+										<div class="player__overlay__header__title">
+											Minecraft speedrun
+										</div>
+										<div class="player__overlay__header__viewers">
+											1233 viewers
+										</div>
+									</div>
+									<div class="player__overlay__controls">
+										<div
+											class="player__overlay__control-item player__overlay__controls__pause"
+										>
+											<span class="material-icons"> pause </span>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__volume-area"
+										>
+											<div class="player__overlay__controls__volume-btn">
+												<span class="material-icons"> volume_up </span>
+											</div>
+											<div class="player__overlay__controls__volume-scrubber">
+												<div
+													class="player__overlay__controls__volume-level-indicator"
+												></div>
+											</div>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__quality"
+										>
+											<span class="material-icons"> settings </span>
+										</div>
+										<div
+											class="player__overlay__control-item player__overlay__controls__reload"
+										>
+											<span class="material-icons">
+												wifi_protected_setup
+											</span>
+										</div>
+									</div>
+									<div class="player__overlay__bottom-gradient"></div>
+								</div>
+							</div>
+							<div class="vbr"></div>
+							<div class="grid__item__chat" style="width: 50%">
+								<div class="chat__list">
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">he pepega me pepega</div>
+									</div>
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">he pepega me pepega</div>
+									</div>
+									<div class="chat__message">
+										<div class="chat__message__time">20:30&nbsp;</div>
+										<div class="chat__message__user-icons">😣😢&nbsp;</div>
+										<div class="chat__message__user">Bekert:&nbsp;</div>
+										<div class="chat__message__text">
+											he pepega me pepega
+											aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa xfjxfjjaxxcx
+										</div>
+									</div>
+								</div>
+								<div class="chat__textarea">
+									<div contenteditable class="chat__input"></div>
+									<div class="chat__smile-icon">😁</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
